--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
 	"clientId": "123456789012345678",
 	"guildId": "876543210987654321",
-	"token": "OTIzNTg3Mjk3MTE3NjA1OTY4.YcSLsw.ePS1r0kLEKPD3ArelqZi3ZCl-D4"
+	"token": "TOKEN"
 }
