--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"clientId": "123456789012345678",
-	"guildId": "876543210987654321",
+	"clientId": "YOUR-CLIENT-ID",
+	"guildId": "YOUR-SERVER-ID",
 	"token": "TOKEN"
 }
